{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 20,
  "lineage": "5d6f5b7c-33ed-fdab-c6c9-676fcda7e183",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:internet-gateway/igw-05196f72a42b3ae38",
            "id": "igw-05196f72a42b3ae38",
            "owner_id": "992382423579",
            "tags": {
              "Name": "eks-igw",
              "env": "dev"
            },
            "tags_all": {
              "Name": "eks-igw",
              "env": "dev"
            },
            "vpc_id": "vpc-06762f6a52fa9fd73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "Project_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:route-table/rtb-085763792196e37f0",
            "default_route_table_id": "rtb-085763792196e37f0",
            "id": "rtb-085763792196e37f0",
            "owner_id": "992382423579",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05196f72a42b3ae38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-rtb",
              "env": "dev"
            },
            "tags_all": {
              "Name": "eks-rtb",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06762f6a52fa9fd73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.Project_igw",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project_rtb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fec4426db7a23a2",
            "route_table_id": "rtb-085763792196e37f0",
            "subnet_id": "subnet-0293afa6f24d6248e"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.Project_igw",
            "module.route-table.aws_default_route_table.Project_rtb",
            "module.vpc.aws_subnet.Project-subnet",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afa7eab0b7c97bc4",
            "route_table_id": "rtb-085763792196e37f0",
            "subnet_id": "subnet-0b22720982bf2a1a9"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.Project_igw",
            "module.route-table.aws_default_route_table.Project_rtb",
            "module.vpc.aws_subnet.Project-subnet",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:security-group/sg-08f868ae75151322c",
            "description": "To provide access to local",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f868ae75151322c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to local",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to local",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-sg",
            "name_prefix": "",
            "owner_id": "992382423579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg",
              "env": "dev"
            },
            "tags_all": {
              "Name": "eks-sg",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06762f6a52fa9fd73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:subnet/subnet-0293afa6f24d6248e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0293afa6f24d6248e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382423579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-subnet1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Project-subnet1",
              "env": "dev"
            },
            "vpc_id": "vpc-06762f6a52fa9fd73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:subnet/subnet-0b22720982bf2a1a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b22720982bf2a1a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382423579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-subnet2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Project-subnet2",
              "env": "dev"
            },
            "vpc_id": "vpc-06762f6a52fa9fd73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382423579:vpc/vpc-06762f6a52fa9fd73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae45359dd378a660",
            "default_route_table_id": "rtb-085763792196e37f0",
            "default_security_group_id": "sg-0641f06df13069981",
            "dhcp_options_id": "dopt-0ce5787af9fd5eb4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06762f6a52fa9fd73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085763792196e37f0",
            "owner_id": "992382423579",
            "tags": {
              "Name": "eks-vpc",
              "env": "dev"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}